objects/nFORCE__Option_Rule__c.object
<CustomObject>
    <description>Rules for conditionally rendering questions.</description>
    <fields>
        <fullName>nFORCE__Condition__c</fullName>
        <description>This field is optional. It is set when the admin adds a rule to a question in the Questionnaire Admin. It describes when a rule is applied.</description>
        <label>Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equal to</fullName>
                </value>
                <value>
                    <fullName>not equal to</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nFORCE__Conditional_Question__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is required. It is manually populated. This field is used to set which question to render when the option matches.</description>
        <label>Conditional_Question</label>
        <referenceTo>nFORCE__Question__c</referenceTo>
        <relationshipLabel>Option Rules (Conditional_Question)</relationshipLabel>
        <relationshipName>Conditional_Question</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__Option__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is required. It is manually populated. This field looks up to the option. It is tested against the nForce__Condition__c to determine whether to display the linked conditional question.</description>
        <label>Option</label>
        <referenceTo>nFORCE__Option__c</referenceTo>
        <relationshipLabel>Option Rules</relationshipLabel>
        <relationshipName>Option_Rules</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__Question__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is required. It is manually populated. This field looks up to a question, whose answer is used to determine whether to display a conditional rule.</description>
        <label>Question</label>
        <referenceTo>nFORCE__Question__c</referenceTo>
        <relationshipLabel>Option Rules</relationshipLabel>
        <relationshipName>Option_Rules</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Option Rule</label>
    <nameField>
        <displayFormat>OR-{000000}</displayFormat>
        <label>Option Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Option Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>